Update results page

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -104,6 +104,11 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  --chart-1: oklch(0.79 0.1574 156.51);
+  --chart-2: oklch(0.79 0.1574 156.51);
+  --chart-3: oklch(0.79 0.1574 156.51);
+  --chart-4: oklch(0.79 0.1574 156.51);
+  --chart-5: oklch(0.79 0.1574 156.51);
 }
 
 .dark {
@@ -142,6 +147,11 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+  --chart-1: oklch(0.79 0.1574 156.51);
+  --chart-2: oklch(0.79 0.1574 156.51);
+  --chart-3: oklch(0.79 0.1574 156.51);
+  --chart-4: oklch(0.79 0.1574 156.51);
+  --chart-5: oklch(0.79 0.1574 156.51);
 }
 
 @layer base {
